# void-protocol-oss

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  void_protocol_final_v2.ksy
.github/: copilot-instructions.md
.github/workflows/: build.yml  test.yml
contracts/src/: Escrow.sol  HelloWorld.sol
contracts/test/: Escrow.t.sol  HelloWorld.t.sol
docs/: Acknowledgment-spec.md  End-to-end-flow.md  Handshake-spec.md  KSY_README.md  Onbording_draft.md  Protocol-spec-CCSDS.md  Protocol-spec-SNLP.md  Protocol-spec.md  Receipt-spec.md  VOID_114B_BODY_ALIGNMENT_2026-04-14.md  VOID_114_SNLP_HEADER_ALIGNMENT_DECISION_2026-04-14.md  VOID_PROJECT_AUDIT_2026-04-16.md  journey_to_hab_plain_text.md
docs/Audit_misc/: VOID_KSY_SECURITY_ALIGNMENT_AUDIT_2026-04-14.md  VOID_PROJECT_AUDIT_2026-04-14.md
docs/kaitai_struct/: tig_common_types.ksy  void_protocol.ksy
docs/todo/: VOID_Project_Tickets_PreAlpha_to_HAB.md  VOID_State_Machine_Spec_v2.1.md  VOID_TOA_Analysis_DutyCycle_v2.1.md  VOID_TOA_Timing_Analysis_v2.1.md  VOP_KSY_Hardening_Audit.md  ccsds_primary_header.ksy  snlp_header.ksy  tig_common_types.ksy  void_protocol (1).ksy
gateway/: .gitignore  README_GATEWAY.md  go.mod  go.sum  void_protocol.go
gateway/cmd/server/: main.go
gateway/data/: .gitkeep
gateway/internal/api/handlers/: egress.go  egress_crashsafety_test.go  egress_integration_test.go  egress_test.go  ingest.go  ingest_chain_test.go  ingest_test.go
gateway/internal/core/chain/: client.go  client_test.go  escrow_abi.json  escrow_bytecode.txt  submitter.go  submitter_test.go  watcher.go  watcher_test.go
gateway/internal/core/receipt/: builder.go  builder_test.go  integration_test.go  processor.go  processor_test.go  store.go  store_test.go
gateway/internal/core/registry/: registry.go
gateway/internal/core/security/: verifier.go
gateway/internal/models/: packets.go
gateway/internal/void_protocol/: constants.go  crc.go  header_size_test.go  nonce_test.go  parser_test.go  roundtrip_test.go  void_protocol.go
gateway/internal/void_protocol/protocol/: ccsds_primary_header.go  snlp_header.go  tig_common_types.go  void_protocol.go
gateway/test/: test_run.go
gateway/test/utils/: generate_packets.go
ground-station/: CMakeLists.txt  README.md  requirements.txt
ground-station/include/: ack_builder.h  bouncer.h  egress_hex.h  egress_json.h  egress_orchestrator.h  egress_poll_client.h  gateway_client.h  serial_hal.h
ground-station/src/: ack_builder.cpp  bouncer.cpp  egress_hex.cpp  egress_json.cpp  egress_poll_client.cpp  gateway_client.cpp  ground_station.py  main copy.cpp  main.cpp  main.py  main_new.cpp  serial_hal.cpp
ground-station/test/: test_ack_builder.cpp  test_egress_hex.cpp  test_egress_json.cpp  test_egress_orchestrator.cpp  test_egress_poll_client.cpp  test_smoke.cpp
metadata/: ground-station-sbom.json
satellite-firmware/: README_SAT_FWARE.md  platformio.ini
satellite-firmware/include/: ack_protocol.h  gps_stub.h  void_config.h  void_packets.h  void_protocol.h
satellite-firmware/src/: buyer.cpp  gps_stub.cpp  main.cpp  security_manager.cpp  seller.cpp  void_protocol.cpp
scripts/: gen_packet.py
test/vectors/: README.md
void-core/: CMakeLists.txt  README_VOID_CORE.md  void_protocol.ksy  void_protocol_final.ksy
void-core/include/: packet_d_builder.h  security_manager.h  void_packets.h  void_packets_ccsds.h  void_packets_snlp.h  void_payment_payload.h  void_types.h
void-core/src/: packet_d_builder.cpp  security_manager.cpp
void-core/test/: test_bouncer.cpp  test_golden_vectors.cpp  test_offsets.cpp  test_packet_d_builder.cpp  test_packet_sizes.cpp  test_packing.cpp  test_security_manager.cpp  test_sign_verify.cpp
